# dictum

./: .env.local.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: copilot-instructions.md
docs/: windows-code-signing.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: flow.rs  keywords.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  encoder.rs
src-tauri/src/commands/: audio_commands.rs  injection_commands.rs  mod.rs  settings_commands.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/injection/: macos.rs  mod.rs  windows.rs
src/components/Overlay/: ErrorIndicator.tsx  Overlay.tsx  ProcessingIndicator.tsx  SuccessFlash.tsx  WaveformVisualizer.tsx
src/components/Settings/: ApiConfigSection.tsx  HotkeyCapture.tsx  SettingsWindow.tsx
src/hooks/: useAudioLevels.ts  useRecordingFlow.ts
src/services/: tauri-bridge.ts  transcription.ts
src/store/: recordingStore.ts  settingsStore.ts
src/types/: recording.ts  settings.ts
