[package]
name = "wisper"
version = "0.1.0"
description = "Push-to-talk speech-to-text desktop app"
authors = ["Northbridge"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "wisper"
path = "src/main.rs"

[lib]
name = "wisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
tauri-plugin-log = "2"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_DataExchange",
  "Win32_Foundation",
  "Win32_System_Memory",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
